--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ requires-python = ">=3.11"
 dependencies = [
     "ollama (>=0.6.1,<0.7.0)",
     "chromadb (>=1.3.7,<2.0.0)",
-    "watchdog (>=6.0.0,<7.0.0)"
+    "watchdog (>=6.0.0,<7.0.0)",
+    "z3-solver (>=4.15.4.0,<5.0.0.0)"
 ]
 
 
